--- a/1.html
+++ b/1.html
@@ -69,7 +69,7 @@
 	<p class='a' id='h2p1'>学习习惯会直接地影响学习</p>
 	<div class='a' id='d3'>
 		<dl>
-			<dt>不要什么都只记在纸上</dt><dd>只把老师讲或写的内容都记在纸上,脑子是闲的或者想其他的.<br/>这样其实不好<br/>可能脑子多想一些老师讲的内容,并尝试自己做一遍,会比直接抄更好</dd>
+			<dt>不要什么都只记在纸上</dt><dd>只把老师讲或写的内容都记在纸上,脑子是闲的或者想下一顿吃什么.<br/>这样其实不好<br/>可能脑子多想一些老师讲的内容,并尝试自己做一遍,会比直接抄更好</dd>
 			<dt>提高自主学习能力</dt><dd>有些题型,老师没讲过的,就不会了.<br/>其实,这种题型,很可能在书里或练习册里<br/>还是不会做?照着答案用铅笔做一遍,再试试自己做</dd>
 			<dt></dt><dd><br/></dd>
 			<dt></dt><dd><br/></dd>
